Positioned,styled cards and fixed navbar's height

--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -3,4 +3,6 @@
   --dark-cyan: hsl(176, 72%, 28%);
   --black: hsl(0, 0%, 0%);
   --dark-gray: hsl(0, 0%, 48%);
+  --gray: hsl(0, 0%, 90%);
+  --light-gray: hsl(0, 0%, 95%);
 }
