--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,2 +1,16 @@
 @use "globals";
 @use "components";
+
+body {
+  background-color: var(--light-gray);
+}
+
+main {
+  position: absolute;
+  top: 425px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 925px;
+}
