Styled the starter card

--- a/app/scss/globals/fonts.scss
+++ b/app/scss/globals/fonts.scss
@@ -1,5 +1,8 @@
 :root {
   --font-commissioner: "Commissioner", sans-serif;
+  --font-bold: 700;
+  --font-regular: 500;
+  --font-light: 400;
 }
 
 body {
