--- a/app/scss/components/stats.scss
+++ b/app/scss/components/stats.scss
@@ -3,3 +3,49 @@
 .stats {
   @include card;
 }
+
+.stats {
+  .all_stats_container {
+    display: flex;
+
+    .stats_container {
+      &:nth-child(1) {
+        padding-right: 80px;
+      }
+
+      &:nth-child(2),
+      &:nth-child(3) {
+        padding-inline: 80px;
+      }
+
+      &:nth-child(1),
+      &:nth-child(2) {
+        border-right: 1px solid var(--gray);
+      }
+
+      h2 {
+        font-size: 2.25rem;
+        color: var(--black);
+      }
+
+      p {
+        letter-spacing: 0;
+      }
+    }
+  }
+
+  .stats-bar {
+    width: auto;
+    height: 10px;
+    margin-top: 30px;
+    background-color: var(--gray);
+    border-radius: 50px;
+
+    .inner-bar {
+      width: 80%;
+      height: inherit;
+      background-color: var(--moderate-cyan);
+      border-radius: 50px;
+    }
+  }
+}
