--- a/app/scss/components/starter.scss
+++ b/app/scss/components/starter.scss
@@ -35,6 +35,12 @@
     font-size: 1.1rem;
     letter-spacing: 0.05rem;
     color: white;
+    cursor: pointer;
+    transition: background 100ms ease-in-out;
+  }
+
+  .button:hover {
+    background-color: var(--dark-cyan);
   }
 
   .bookmark {
@@ -48,9 +54,15 @@
     font-weight: var(--font-bold);
     font-size: 1.1rem;
     color: var(--dark-gray);
+    cursor: pointer;
+    transition: opacity 100ms ease-in-out;
 
     img {
       margin-right: 10px;
     }
+  }
+
+  .bookmark:hover {
+    opacity: 75%;
   }
 }
