Added pledge option in popup card

--- a/app/scss/components/general_styling.scss
+++ b/app/scss/components/general_styling.scss
@@ -18,3 +18,16 @@ button {
   border-radius: 50px;
   padding: 20px 30px;
 }
+
+.button-smaller {
+  padding-inline: 40px;
+  font-weight: var(--font-bold);
+  font-size: 1rem;
+  color: white;
+  cursor: pointer;
+  transition: background 100ms ease-in-out;
+}
+
+.button-smaller:hover {
+  background: var(--dark-cyan);
+}
