Added modal completed message

--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -4,6 +4,7 @@ nav {
   height: 550px;
   background: url(../../../images/image-hero-desktop.jpg);
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   padding-left: 200px;
   padding-right: 200px;
