--- a/app/scss/components/starter.scss
+++ b/app/scss/components/starter.scss
@@ -62,11 +62,62 @@
     }
   }
 
-  .bookmark:hover {
+  .bookmark-mobile {
+    display: none;
+  }
+
+  .bookmark:hover,
+  .bookmark-mobile:hover {
     opacity: 75%;
   }
 
   .bookmarked {
     color: var(--dark-cyan);
+  }
+
+  @media (max-width: 650px) {
+    padding: 50px 30px;
+
+    .bookmark {
+      display: none;
+    }
+
+    .bookmark-mobile {
+      display: block;
+      width: 56px;
+      height: 56px;
+      border: none;
+      background-color: white;
+      border-radius: 50px;
+      padding: 0;
+      transition: opacity 100ms ease-in-out;
+      cursor: pointer;
+    }
+  }
+
+  @media (max-width: 550px) {
+    margin-inline: 20px;
+  }
+
+  @media (max-width: 400px) {
+    .button {
+      width: 100%;
+      margin-right: 20px;
+      font-size: 1rem;
+      text-align: center;
+      letter-spacing: 0;
+    }
+  }
+
+  @media (max-width: 470px) {
+    h2 {
+      font-size: 1.7rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1rem;
+      letter-spacing: 0rem;
+    }
   }
 }
