--- a/app/scss/components/about.scss
+++ b/app/scss/components/about.scss
@@ -64,6 +64,39 @@
       }
     }
   }
+
+  @media (max-width: 800px) {
+    .card .headline {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+
+      h3 {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  @media (max-width: 470px) {
+    p {
+      font-size: 0.95rem;
+      line-height: 1.5rem;
+      letter-spacing: 0.01rem;
+    }
+
+    .card .footer {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .card .footer .p-container {
+      margin-bottom: 35px;
+    }
+
+    .card .footer .button-smaller {
+      padding: 20px 30px;
+    }
+  }
 }
 
 .gray {
