--- a/app/scss/components/modal_completed.scss
+++ b/app/scss/components/modal_completed.scss
@@ -3,8 +3,9 @@
 .modal-completed {
   @include card;
   max-width: 600px;
-  height: 500px;
-  position: relative;
+  position: absolute;
+  right: 50px;
+  left: 50px;
   margin-inline: auto;
   z-index: 20;
   text-align: center;
@@ -21,5 +22,28 @@
 
   p {
     margin-bottom: 40px;
+  }
+
+  @media (max-width: 640px) {
+    img {
+      margin-bottom: 15px;
+    }
+
+    h2 {
+      margin-top: 10px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (max-width: 470px) {
+    p {
+      font-size: 0.95rem;
+      line-height: 1.5rem;
+      letter-spacing: 0.01rem;
+    }
   }
 }
