--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -6,21 +6,118 @@ nav {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding-left: 200px;
-  padding-right: 200px;
   padding-top: 50px;
 
   .nav__container {
+    margin-left: 200px;
+    margin-right: 200px;
+
+    @media (max-width: 1350px) {
+      margin-left: 100px;
+      margin-right: 100px;
+    }
+
+    @media (max-width: 1100px) {
+      margin-left: 40px;
+      margin-right: 40px;
+    }
+
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
-    ul {
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 31px;
+      height: 21px;
+      cursor: pointer;
+
+      .bar {
+        width: 100%;
+        height: 3px;
+        background-color: white;
+        border-radius: 3px;
+        transition: transform 500ms;
+      }
+    }
+
+    .options-container {
       display: flex;
       list-style: none;
 
       li a {
         color: white;
         margin-left: 2rem;
+      }
+    }
+
+    @media (max-width: 640px) {
+      .hamburger {
+        display: flex;
+      }
+
+      .options-container {
+        display: none;
+      }
+
+      div.active {
+        z-index: 100;
+        position: relative;
+        top: 5px;
+        :nth-child(1) {
+          position: relative;
+          transform: rotate(45deg);
+        }
+
+        :nth-child(2) {
+          position: relative;
+          top: -17px;
+          transform: rotate(-45deg);
+        }
+
+        :nth-child(3) {
+          display: none;
+        }
+      }
+
+      .options-container.active {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: absolute;
+        z-index: 100;
+        top: 100px;
+        left: 0;
+        right: 0;
+        height: 250px;
+        text-align: left;
+        margin-left: 40px;
+        margin-right: 40px;
+        background-color: white;
+        padding: 0;
+        font-size: 1.3rem;
+        font-weight: var(--font-regular);
+        border-radius: 5px;
+
+        li {
+          margin: 0;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          border-bottom: 1px solid var(--light-gray);
+
+          &:nth-of-type(3) {
+            border: none;
+          }
+
+          .nav__item {
+            padding-left: 30px;
+            color: var(--black);
+            margin: 0;
+          }
+        }
       }
     }
   }
