--- a/app/scss/components/stats.scss
+++ b/app/scss/components/stats.scss
@@ -9,19 +9,46 @@
     display: flex;
     overflow: hidden;
 
+    @media (max-width: 830px) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    @media (max-width: 746px) {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
     .stats_container {
+      @media (max-width: 746px) {
+        margin-top: 7px;
+      }
       &:nth-child(1) {
         padding-right: 80px;
+
+        @media (max-width: 746px) {
+          padding: 0;
+        }
       }
 
       &:nth-child(2),
       &:nth-child(3) {
         padding-inline: 80px;
+
+        @media (max-width: 746px) {
+          padding: 0;
+        }
       }
 
       &:nth-child(1),
       &:nth-child(2) {
         border-right: 1px solid var(--gray);
+
+        @media (max-width: 746px) {
+          border: none;
+          border-bottom: 1px solid var(--gray);
+        }
       }
 
       h2 {
