--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -2,7 +2,7 @@
 
 nav {
   height: 550px;
-  background: url(../../../images/image-hero-desktop.jpg);
+  background: url(../images/image-hero-desktop.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
