--- a/app/scss/components/reward_card.scss
+++ b/app/scss/components/reward_card.scss
@@ -15,7 +15,7 @@
   margin-bottom: 0;
 
   .close-popup {
-    background-image: url("../../../images/icon-close-modal.svg");
+    background-image: url("../images/icon-close-modal.svg");
     width: 15px;
     height: 15px;
     cursor: pointer;
@@ -34,7 +34,7 @@
 
   .close-popup:hover,
   .close-popup:hover {
-    background-image: url("../../../images/icon-close-modal-hover.svg");
+    background-image: url("../images/icon-close-modal-hover.svg");
   }
 
   @media (max-width: 800px) {
